update to openapi schema
